# interpolator

./: CMakeLists.txt  README.md
include/: Array2D.h  Bitmap.h  Canvas.h  Color.h  Drawable.h  NewtonPolynomial.h  debug.h
src/: Bitmap.cpp  Canvas.cpp  Color.cpp  NewtonPolynomial.cpp  main.cpp
